# av1-cloud

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md
configs/: default.toml  email_code_template.html  rbac.conf  rbac.csv  release.toml
migrations/2023-08-28-082137_users/: up.sql
migrations/2023-09-04-074434_employees/: up.sql
migrations/2023-09-07-083824_user_files/: up.sql
migrations/2023-09-07-084103_sys_files/: up.sql
migrations/2023-09-27-040243_orders/: up.sql
migrations/2023-09-27-040448_transcode_tasks/: up.sql
scripts/: av1-cloud.service  deploy.sh  dev-env.sh  log.sh  reset.sh
scripts/nginx/: nginx.conf  reload.sh
src/: auth.rs  http.rs  lib.rs  logger.rs  main.rs  schema.rs  settings.rs  setttings.rs
src/application/: email.rs  mod.rs  transcode.rs  user.rs
src/application/file_system/: mod.rs  service.rs  upload.rs  user_file.rs  video_info.rs
src/application/user/: employee.rs
src/cqrs/: file_system.rs  mod.rs  transcode.rs  user.rs
src/domain/: mod.rs
src/domain/file_system/: file.rs  mod.rs  service.rs  service_upload.rs
src/domain/transcode_order/: mod.rs  params.rs  service.rs
src/domain/user/: employee.rs  mod.rs  service.rs  service_email.rs  user.rs
src/infrastructure/: av1_factory.rs  email.rs  file_sys.rs  mod.rs  repo_employee.rs  repo_order.rs  repo_upload_task.rs  repo_user.rs  repo_user_file.rs  sms_code.rs
src/presentation/: employee.rs  file_system.rs  mod.rs  transcode.rs  user.rs
src/user/: interface.rs
utils/: Cargo.toml
utils/src/: code.rs  lib.rs  logger.rs
utils/src/db_pools/: mod.rs  postgres.rs
