[package]
name = "av1-cloud"
version = "0.1.0"
edition = "2021"


[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
] }
paste = "1.0.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
time = { version = "0.3.28", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "local-time",
    "env-filter",
] }

[dev-dependencies]
reqwest = "0.11.20"
tracing-test = "0.2.4"
