[package]
name = "av1-cloud"
version = "0.1.1"
edition = "2021"


[workspace]
members = ["utils"]

[workspace.dependencies]
anyhow = "1.0.75"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from",
    "deref",
] }
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.2", features = ["deadpool", "postgres"] }
redis = { version = "0.23.2", features = ["tokio", "aio", "tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
actix-web = "4.3.1"
anyhow.workspace = true
argon2 = { version = "0.5.1", features = ["std"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
derive_more.workspace = true
diesel.workspace = true
diesel-async.workspace = true
flaken = "0.2.2"
getset = "0.1.2"
paste = "1.0.14"
rand = "0.8.5"
serde.workspace = true
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio.workspace = true
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

lettre = { version = "0.10.4", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
] }
redis.workspace = true
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-identity = "0.5.2"
email_address = { version = "0.2.4", default-features = false }
actix-cors = "0.6.4"
reqwest = { version = "0.11.20", default-features = false, features = [
    "json",
    "hyper-rustls",
    "rustls-tls",
    "tokio-rustls",
] }
sha2 = "0.10.7"
hmac = "0.12.1"
hex = "0.4.3"
async-graphql = "6.0.5"
async-graphql-actix-web = "6.0.5"
actix-casbin-auth = { git = "https://github.com/casbin-rs/actix-casbin-auth.git", version = "0.4.4", default-features = false, features = [
    "runtime-tokio",
] }

[dev-dependencies]
# 必须使用 rustls，因为 arch 系统的 openssl 产生了不兼容的更改
reqwest = { version = "0.11.20", default-features = false, features = [
    "rustls-tls",
] }
tracing-test = "0.2.4"

[dependencies.utils]
path = "utils"
features = ["code"]

[features]
default = ["keydb", "register_root"]
keydb = ["utils/keydb"]
redis = ["utils/redis"]
register_root = []
