[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
deadpool-redis = { version = "0.12.0", optional = true }
derive_more.workspace = true
diesel.workspace = true
diesel-async.workspace = true
local-ip-address = "0.5.4"
paste = { version = "1.0.14", optional = true }
redis.workspace = true
serde.workspace = true
tokio.workspace = true

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
optional = true

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["clock", "std", "serde"]
optional = true

[dependencies.tracing]
version = "0.1.37"
optional = true

[features]
default = []
keydb = ["redis/cluster-async"]
redis = ["dep:deadpool-redis"]
code = ["macros"]
macros = ["dep:paste"]
logger = ["dep:tracing-subscriber", "dep:chrono", "tracing"]
